Solved: lesson2-focus_04-offscreen-content

--- a/lesson2-focus/04-offscreen-content/blog.css
+++ b/lesson2-focus/04-offscreen-content/blog.css
@@ -169,6 +169,10 @@ h6, .h6 {
 }
 
 .modal {
-  display: block;
+  display: none;
   left: 9999px;
+}
+
+.modal:focus {
+  display: block;
 }
